--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -26,24 +26,20 @@
 /* Header */
 .header {
   grid-area: header;
-
   color: white;
   padding: 0 20px;
   gap: 20px;
   font-weight: bold;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
-  z-index: 10;
 }
 
 /* Sidebar */
 .sidebar {
   grid-area: sidebar;
   color: white;
-  padding: 20px 10px;
-  height: calc(100vh - 60px);
-  overflow-y: auto;
+  height: 100vh;
   
 }
 
