--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,19 +1,18 @@
 
 .visiblee {
    height: 40px;
-    background-color: green;
     padding: 8px; /* Padding ada saat muncul */
-    color: white;
+    color: #6a7282;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
-    border: 1px solid darkgreen;
+  
 }
 
 .hiddene {
     height: 0;
     padding-top: 0;    /* Penting: Nol-kan padding agar benar-benar hilang */
     padding-bottom: 0;
-   transition: all 0.5s ease-in-out;       /* Opsional: Tambahkan efek pudar agar lebih halus */
+    transition: all 0.5s ease-in-out;       /* Opsional: Tambahkan efek pudar agar lebih halus */
     border: 0;
     overflow: hidden;
 
