--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,42 @@
+.visiblePendaftaran {
+   height: 50px;
+    padding: 8px; /* Padding ada saat muncul */
+    color: #6a7282;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+  
+}
 
-.visiblee {
+.hiddenPendaftaran {
+    height: 0;
+    padding-top: 0;    /* Penting: Nol-kan padding agar benar-benar hilang */
+    padding-bottom: 0;
+    transition: all 0.5s ease-in-out;       /* Opsional: Tambahkan efek pudar agar lebih halus */
+    border: 0;
+    overflow: hidden;
+
+}
+.visiblePasien {
+   height: 50px;
+    padding: 8px; /* Padding ada saat muncul */
+    color: #6a7282;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+  
+}
+
+.hiddenPasien {
+    height: 0;
+    padding-top: 0;    /* Penting: Nol-kan padding agar benar-benar hilang */
+    padding-bottom: 0;
+    transition: all 0.5s ease-in-out;       /* Opsional: Tambahkan efek pudar agar lebih halus */
+    border: 0;
+    overflow: hidden;
+
+}
+
+
+.visibleFarmasi {
    height: 40px;
     padding: 8px; /* Padding ada saat muncul */
     color: #6a7282;
@@ -8,7 +45,26 @@
   
 }
 
-.hiddene {
+.hiddenFarmasi {
+    height: 0;
+    padding-top: 0;    /* Penting: Nol-kan padding agar benar-benar hilang */
+    padding-bottom: 0;
+    transition: all 0.5s ease-in-out;       /* Opsional: Tambahkan efek pudar agar lebih halus */
+    border: 0;
+    overflow: hidden;
+
+}
+
+.visibleKeuangan {
+   height: 40px;
+    padding: 8px; /* Padding ada saat muncul */
+    color: #6a7282;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+  
+}
+
+.hiddenKeuangan {
     height: 0;
     padding-top: 0;    /* Penting: Nol-kan padding agar benar-benar hilang */
     padding-bottom: 0;
