--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
 
 /* Untuk scrollbar vertikal */
 ::-webkit-scrollbar {
-  width: 8px; /* Sesuaikan dengan ketebalan yang diinginkan, misal 4px, 6px, dll. */
+  width: 8px;
+  scroll-behavior: smooth;
 }
 }
 
