--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -16,7 +16,7 @@
     overflow: hidden;
 
 }
-.visiblePasien {
+.visibleDokter {
    height: 50px;
     padding: 8px; /* Padding ada saat muncul */
     color: #6a7282;
@@ -25,7 +25,7 @@
   
 }
 
-.hiddenPasien {
+.hiddenDokter {
     height: 0;
     padding-top: 0;    /* Penting: Nol-kan padding agar benar-benar hilang */
     padding-bottom: 0;
